# Tasks-Manager

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
DOCS/: architecture.md
app/: main.py
app/api/v1/: api.py
app/config/: config.py
app/db/: base.py  base_class.py  session.py
app/middleware/: logging.py
app/models/: models.py
app/router/: router.py
app/schemas/: schemas.py
app/service/: dep_service.py  service.py
app/tests/: README.md  conftest.py  test_api.py  tests.py
