[project]
name = "task-manager"
version = "0.1.0"
description = "Tasks manager"
authors = [
    {name = "IlyasSultanov0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[project.optional-dependencies]
test = [
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-asyncio (>=0.21.0,<1.0.0)",
    "httpx (>=0.25.0,<1.0.0)",
    "pytest-mock (>=3.11.0,<4.0.0)",
    "aiosqlite (>=0.19.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
